# split-flap

./: .gitignore  CLAUDE.md  justfile
cad/: .gitignore  README.md  pyproject.toml
cad/export/: box-corner.stl  bridge-nema.stl  drum-inner-byj.stl  drum-inner-nema.stl  drum-inner.stl  drum-outer.stl  flap.stl  grommet-bathroom.stl  grommet-usb.stl  holder.stl  ipad-body.stl  ipad-bracket.stl  ipad-lid.stl  lid-clip-post-block.stl  lid-clip-post-rib.stl  lid-clip-post.stl  lid-clip.stl  mirror-jig-arch.stl  mirror-jig-bottom.stl  mirror-jig-corner.stl  mirror-jig-side.stl  mirror-light-assembly.step  mirror-slack-spool.step  mirror-slack-spool.stl  mirror-spacer-arch.step  mirror-spacer-arch.stl  mirror-spacer-corner.step  mirror-spacer-corner.stl  mirror-spacer-straight.step  mirror-spacer-straight.stl  mount-nema.stl  poop-bucket.stl  unit-nema.stl  unit.stl  usb-grommet.stl
cad/export/flaps/: flap_00_blank.3mf  flap_00_blank_A.3mf  flap_01_A.3mf  flap_01_AB.3mf  flap_02_B.3mf  (+99 more)
cad/splitflap_cad/: __main__.py  assembly.py  bambu3mf.py  boxcorner.py  catalog.py  drum.py  fins.py  flap.py  flap3mf.py  frames.py  geo.py  glyphflap.py  grommet.py  holder.py  ipadwall.py  lidclip.py  mirrorjig.py  mirrorlight.py  mirrorplot.py  motor.py  params.py  poopbucket.py  prusa3mf.py  select.py  shell.py  stepper28byj.py  threemf.py  unit.py  unitnema.py  usbgrommet.py  vendor.py  viewer.py
cad/tests/: golden_registry.py  regen_goldens.py  test_catalog.py  test_cli.py  test_fins.py  test_flap.py  test_geometry.py  test_glyphflap.py  test_mirrorlight.py  test_plate_windows.py
(+297 files in other folders)
